--- a/exercícios/modulo3/ex022/fundo006.html
+++ b/exercícios/modulo3/ex022/fundo006.html
@@ -7,18 +7,29 @@
     <title>Teste Fundo</title>
     <style>
         body{
-            height: 98vh;
+           /* height: 98vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment:fixed;
+        
+
+Shorthand - background:
+
+        color>image>position>repeat>(size - não funciona)>attachment
+*/
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
+            
         }
 
         main{
             background-color: white;
             margin: auto;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             border: 1px solid rgb(185, 0, 0);
             border-radius: 10px;
@@ -31,7 +42,7 @@
 <body>
     <main>
         <h1>Tesde de imagem de fundo</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, doloribus quasi ab tempora esse eaque sapiente asperiores magnam omnis minus illo. Consectetur ut error maxime consequuntur numquam, quo nihil voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, officia nulla qui veniam beatae aut est cumque? Deleniti molestias facilis, minus eligendi necessitatibus hic sapiente fugiat ipsa iste at id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus nemo optio facilis veritatis eum ea, incidunt cum nam. Culpa quibusdam pariatur cum, inventore atque nesciunt deleniti laboriosam maxime provident dolorem?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, doloribus quasi ab tempora esse eaque sapiente asperiores magnam omnis minus illo. Consectetur ut error maxime consequuntur numquam, quo nihil voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, officia nulla qui veniam beatae aut est cumque? Deleniti molestias facilis, minus eligendi necessitatibus hic sapiente fugiat ipsa iste at id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus nemo optio facilis veritatis eum ea, incidunt cum nam. Culpa quibusdam pariatur cum, inventore atque nesciunt deleniti laboriosam maxime provident dolorem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, doloribus quasi ab tempora esse eaque sapiente asperiores magnam omnis minus illo. Consectetur ut error maxime consequuntur numquam, quo nihil voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, officia nulla qui veniam beatae aut est cumque? Deleniti molestias facilis, minus eligendi necessitatibus hic sapiente fugiat ipsa iste at id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus nemo optio facilis veritatis eum ea, incidunt cum nam. Culpa quibusdam pariatur cum, inventore atque nesciunt deleniti laboriosam maxime provident dolorem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, doloribus quasi ab tempora esse eaque sapiente asperiores magnam omnis minus illo. Consectetur ut error maxime consequuntur numquam, quo nihil voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, officia nulla qui veniam beatae aut est cumque? Deleniti molestias facilis, minus eligendi necessitatibus hic sapiente fugiat ipsa iste at id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus nemo optio facilis veritatis eum ea, incidunt cum nam. Culpa quibusdam pariatur cum, inventore atque nesciunt deleniti laboriosam maxime provident dolorem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, doloribus quasi ab tempora esse eaque sapiente asperiores magnam omnis minus illo. Consectetur ut error maxime consequuntur numquam, quo nihil voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, officia nulla qui veniam beatae aut est cumque? Deleniti molestias facilis, minus eligendi necessitatibus hic sapiente fugiat ipsa iste at id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus nemo optio facilis veritatis eum ea, incidunt cum nam. Culpa quibusdam pariatur cum, inventore atque nesciunt deleniti laboriosam maxime provident dolorem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, doloribus quasi ab tempora esse eaque sapiente asperiores magnam omnis minus illo. Consectetur ut error maxime consequuntur numquam, quo nihil voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, officia nulla qui veniam beatae aut est cumque? Deleniti molestias facilis, minus eligendi necessitatibus hic sapiente fugiat ipsa iste at id. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus nemo optio facilis veritatis eum ea, incidunt cum nam. Culpa quibusdam pariatur cum, inventore atque nesciunt deleniti laboriosam maxime provident dolorem?</p>
     </main>
 
 
