--- a/exercícios/modulo3/ex023/tab002.html
+++ b/exercícios/modulo3/ex023/tab002.html
@@ -17,6 +17,13 @@
                 border: 1px solid black;
             }
             
+            caption {
+                font-size: 1,5em;
+                font-weight: bold;
+                padding: 10px;
+                background-color: lightgray;
+            }
+
             td, th{
                 border: 1px solid black;
                 padding: 5px;
@@ -36,6 +43,7 @@
 <body>
     <!-- Anatomia para tabelas grandes
         TABLE
+            CAPTION
             THEAD
                 TR, TD, TH
             TBODY
@@ -44,10 +52,11 @@
                 TR, TD, TH-->
     <h1>Uso de Tabelas Grandes</h1>
         <table>
+            <caption>População das Unidades Federativas</caption>
             <thead>
                 <tr>
-                    <th>Estado</th>
-                    <th>População</th>
+                    <th scope="col">Estado</th>
+                    <th scope="col">População</th>
                 </tr>
             </thead>
 
@@ -164,7 +173,7 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <th>Total de Habitantes</th>
+                    <th scope="row">Total de Habitantes</th>
                     <td class="num"><strong>190.755.799</strong></td>
                 </tr>
             </tfoot>
