--- a/exercícios/modulo3/ex023/tab002.html
+++ b/exercícios/modulo3/ex023/tab002.html
@@ -15,6 +15,7 @@
                 width: 400px;
                 border-collapse: collapse;
                 border: 1px solid black;
+                position: relative;
             }
             
             caption {
@@ -22,6 +23,22 @@
                 font-weight: bold;
                 padding: 10px;
                 background-color: lightgray;
+            }
+
+            tbody >tr:nth-child(odd) {/* 2n-1 */
+                background-color: white;
+            }
+
+            tbody >tr:nth-child(even) {/* 2n */
+                background-color: lightgray;
+            }
+
+            thead > tr > th{
+                position: sticky;
+                top: -1px;
+                background-color: grey;
+                border: 1px solid black;
+                
             }
 
             td, th{
@@ -56,7 +73,7 @@
             <thead>
                 <tr>
                     <th scope="col">Estado</th>
-                    <th scope="col">População</th>
+                    <th scope="col" style="width: 50px;">População</th>
                 </tr>
             </thead>
 
