--- a/exercícios/modulo4/ex024/iframe001.html
+++ b/exercícios/modulo4/ex024/iframe001.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Estudo de iframe</title>
+
+    <style>
+        iframe{
+           width: 400px;
+        }
+
+
+    </style>
+
 </head>
 <body>
     
@@ -12,8 +21,12 @@
 
     <p>acesse <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe> para aulas de programação.</p>
 
+    <p>o site do google
+    <iframe src="https://www.google.com" frameborder="0">
+        <a href="https://www.google.com" target="_blank"></a>
+    </iframe> não funciona no iframe</p>
 
-
+    <p>facebook <iframe src="https://www.facebook.com" frameborder="0"></iframe></p>
 
 </body>
 </html>
