--- a/exercícios/modulo4/ex025/pags/pag01.html
+++ b/exercícios/modulo4/ex025/pags/pag01.html
@@ -8,6 +8,7 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
+            background-color: white;
         }
         table{
             border-collapse: collapse;
@@ -21,6 +22,11 @@
             border: 1px solid black;
             padding: 10px;
         }
+
+        tr:nth-child(odd){
+            background-color: white;
+        }
+
         tr:nth-child(even){
             background-color:lightgray;
         }
